add direct and indirect dep

--- a/module-3/package.json
+++ b/module-3/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "auditjs": "^4.0.33",
     "lodash": "^4.17.21",
-    "react": "^17.0.2"
+    "react": "^17.0.2",
+    "dezalgo": "1.0.3"
   }
 }
